--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module FedoraCommons::APIA
 
+
+0.02 Fri Nov  6 14:37:16 EST 2009
+    - Fixed minor errors in testing script (make test).
+
 0.01 Fri Oct 23 12:59:46 2009
     - original version; created by ExtUtils::ModuleMaker 0.51
 
