--- a/Changes
+++ b/Changes
@@ -1,10 +1,14 @@
 Revision history for Perl module FedoraCommons::APIA
 
+0.2.1 Fri Nov 13 11:45:10 EST 2009
+      - Skip tests when Fedora server environment variables are not set.
+	Allows successful install using CPAN.
+      - Added more details for successful tests
 
-0.02 Fri Nov  6 14:37:16 EST 2009
-    - Fixed minor errors in testing script (make test).
+0.02  Fri Nov  6 14:37:16 EST 2009
+      - Fixed minor errors in testing script (make test).
 
-0.01 Fri Oct 23 12:59:46 2009
-    - original version; created by ExtUtils::ModuleMaker 0.51
+0.01  Fri Oct 23 12:59:46 2009
+      - original version; created by ExtUtils::ModuleMaker 0.51
 
 
